# Multi-Modal-Ai-Assistant

./: README.md
backend/: llm.py  main.py  pyproject.toml  text_to_speech.py  voice_agent.py
backend/services/: live_stt.py
backend/uploads/: voice_message_1781414524663.webm
voice-agent/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
voice-agent/src/: index.css
voice-agent/src/components/: ChatWindow.jsx  MessageBubble.jsx  Navbar.jsx  Sidebar.jsx  TypingIndicator.jsx  VoiceRecorder.jsx
voice-agent/src/hooks/: useVoiceRecorder.js
voice-agent/src/pages/: Home.jsx
voice-agent/src/services/: api.js
